# Fitness-Tracker-Program

./: BMICalculator_test.py  Changelog.md  Dockerfile  HelloWorld!.py  README.md  backend_test.py  main.py  pyproject.toml  requirements.txt  vars.py
.github/workflows/: python-app.yml
Backend/: GetInfo.py  UserInfo.json
frontend/: BMICalculator.py  History.py  HomeScreen.py  TrackWorkout.py  UI.py  createAccount.py  loginUI.py  login_UI.py
src/my_package/: main.py  vars.py
src/my_package/Backend/: UserInfo.json
src/my_package/frontend/: BMICalculator.py  History.py  HomeScreen.py  TrackWorkout.py  createAccount.py  loginUI.py
tests/: BMICalculator_test.py  backend_test.py
